--- a/barbershop/css/style.css
+++ b/barbershop/css/style.css
@@ -1,9 +1,158 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     outline: none;
 }
+@-webkit-keyframes check-left {
+    0% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(-20px);
+                transform: translateX(-20px);
+    }
+    50% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(0px);
+                transform: translateX(0px)
+    }
+}
+@keyframes check-left {
+    0% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(-20px);
+                transform: translateX(-20px);
+    }
+    50% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(0px);
+                transform: translateX(0px)
+    }
+}
+@-webkit-keyframes disabled-box {
+    0% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(0px);
+                transform: translateX(0px);
+    }
+    50% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(-20px);
+                transform: translateX(-20px)
+    }
+}
+@keyframes disabled-box {
+    0% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(0px);
+                transform: translateX(0px);
+    }
+    50% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(-20px);
+                transform: translateX(-20px)
+    }
+}
+@-webkit-keyframes check-right {
+    0% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(20px);
+                transform: translateX(20px)
+    }
+    50% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(0px);
+                transform: translateX(0px)
+    }
+}
+@keyframes check-right {
+    0% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(20px);
+                transform: translateX(20px)
+    }
+    50% {
+        -webkit-transform: rotate(90deg);
+                transform: rotate(90deg);
+        -webkit-transform: translateX(0px);
+                transform: translateX(0px)
+    }
+}
+@-webkit-keyframes popup{
+    0% {
+        -webkit-transform: translateY(-2000px);
+                transform: translateY(-2000px);
+    }
+    70% {
+        -webkit-transform: translateY(30px);
+                transform: translateY(30px);
+    }
+    90% {
+        -webkit-transform: translateY(-10px);
+                transform: translateY(-10px)
+    }
+    100% {
+        -webkit-transform: translateY(0px);
+                transform: translateY(0px)
+    }
+}
+@keyframes popup{
+    0% {
+        -webkit-transform: translateY(-2000px);
+                transform: translateY(-2000px);
+    }
+    70% {
+        -webkit-transform: translateY(30px);
+                transform: translateY(30px);
+    }
+    90% {
+        -webkit-transform: translateY(-10px);
+                transform: translateY(-10px)
+    }
+    100% {
+        -webkit-transform: translateY(0px);
+                transform: translateY(0px)
+    }
+} 
+@-webkit-keyframes shake {
+    0%, 100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      -webkit-transform: translateX(-10px);
+              transform: translateX(-10px);
+    }
+    20%, 40%, 60%, 80% {
+      -webkit-transform: translateX(10px);
+              transform: translateX(10px);
+    }
+  } 
+@keyframes shake {
+    0%, 100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      -webkit-transform: translateX(-10px);
+              transform: translateX(-10px);
+    }
+    20%, 40%, 60%, 80% {
+      -webkit-transform: translateX(10px);
+              transform: translateX(10px);
+    }
+  }
 body{
     background: rgb(245, 242, 237);
     margin: 0;
@@ -34,13 +183,21 @@ h1{
     margin-bottom: 51px;
 }
 .header-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .header-logo{
     width: 155px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 3px;
 }
 .header-logo a{
@@ -100,14 +257,18 @@ h1{
 /*Содержимое сайта */
 .main-logo{
     margin: 0 auto;
-    width: 360px;
+    width: 371px;
     margin-top: 60px;
     margin-bottom: 65px;
 }
 .features{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-bottom: 78px;
-    justify-content: space-between
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between
 }
 .features-item{
     width: 300px;
@@ -124,8 +285,12 @@ h1{
     padding-bottom: 60px;
     font-size: 30px;
     line-height: 42px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 .features-name::before{
     content:"";
@@ -134,15 +299,21 @@ h1{
     width: 20px;
     height: 20px;
     position: absolute;
-    transform: rotate(45deg);  
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);  
     top:53px;
 }
 .index-content{
     background: url("../img/shadow.png") no-repeat center, #f8f5f2
                  url("../img/bg-index.jpg");
     color: #000;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     padding: 45px 80px;
     margin-bottom: 35px;
     padding-bottom: 50px;
@@ -189,8 +360,12 @@ a.btn{
     font-size: 14px;
 }
 .btn-group{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .index-content-left{
     width: 380px;
@@ -234,11 +409,11 @@ p.txt-caption{
 }
 .contact-info .btn-group{
     padding-right: 45px;
-    margin-top: 22px;
+    margin-top: 24px;
 }
 .contact-info .btn{
     width: 140px;
-    padding: 10px 0;
+    padding: 10px 0 8px 0px;;
     text-align: center;
 }
 .index-content-right{
@@ -264,7 +439,7 @@ p.txt-caption{
 
 }
 .contact-block{
-    margin-bottom: 68px;
+    margin-bottom: 66px;
 }
 .breadcrumbs ul li:after{
     content: "";
@@ -272,7 +447,9 @@ p.txt-caption{
     width: 8px;
     height: 8px;
     background: #000;
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
     position: absolute;
     top: 5px;
     right: 16px;
@@ -286,7 +463,8 @@ p.txt-caption{
   
 }
 .product-img img, .img-prev img{
-    box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
+    -webkit-box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
+            box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
     margin-bottom: 18px;
 }
 .product-cart .btn-buy{
@@ -315,6 +493,7 @@ p.txt-caption{
 }
 .vendor-code{
     color: #aba9a7;
+    padding-right: 2px;
 }
 .product-descriotion{
     margin-bottom: 36px;
@@ -340,7 +519,9 @@ p.txt-caption{
     width: 8px;
     height: 8px;
     background: #000;
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
     position: absolute;
     left: 2px;
     top: 8px;
@@ -373,14 +554,20 @@ p.txt-caption{
     width: 8px;
     height: 8px;
     background: #000;
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
     position: absolute;
     left: 1px;
     top: 6px;
 }
 .product-content{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-bottom: 31px;
     margin-top: 24px;
 }
@@ -389,7 +576,7 @@ p.txt-caption{
     line-height: 48px;
     text-align: center;
     position: relative;
-    margin-bottom: 60px;
+    margin-bottom: 62px;
 }
 .lg-txt::before,.lg-txt::after{
     display: block;
@@ -424,8 +611,12 @@ p.txt-caption{
     margin-right: 0;
 }
 .price-info{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-bottom: 42px;
 }
 .price-info-left{
@@ -438,6 +629,8 @@ p.txt-caption{
     margin-bottom: 77px;
 }
 .about-us-content{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .about-us .txt-caption-small{
@@ -454,15 +647,22 @@ p.txt-caption{
     width: 460px;
 }
 .products-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .products-container h1{
-    flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
 }
 .products-container .breadcrumbs{
-    flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
 }
 .product-group{
     margin-bottom: 33px;
@@ -476,6 +676,7 @@ p.txt-caption{
     margin-bottom: 13px;
     line-height: 24px;
     padding-left: 44px;
+    cursor: pointer;
     
 }
 .sidebar fieldset{
@@ -510,49 +711,69 @@ p.txt-caption{
     width: 112px;
     padding: 13px 33px;
 }
-.sidebar #brand-1:checked ~ label[for="brand-1"] .chbx-label::before, 
-.sidebar #brand-1:checked ~ label[for="brand-1"] .chbx-label::after,
-.sidebar #brand-2:checked ~ label[for="brand-2"] .chbx-label::before, 
-.sidebar #brand-2:checked ~ label[for="brand-2"] .chbx-label::after,
-.sidebar #brand-3:checked ~ label[for="brand-3"] .chbx-label::before, 
-.sidebar #brand-3:checked ~ label[for="brand-3"] .chbx-label::after,
-.sidebar #brand-4:checked ~ label[for="brand-4"] .chbx-label::before, 
-.sidebar #brand-4:checked ~ label[for="brand-4"] .chbx-label::after,
-.sidebar #brand-5:checked ~ label[for="brand-5"] .chbx-label::before, 
-.sidebar #brand-5:checked ~ label[for="brand-5"] .chbx-label::after,
-.sidebar #brand-6:checked ~ label[for="brand-6"] .chbx-label::before, 
-.sidebar #brand-6:checked ~ label[for="brand-6"] .chbx-label::after{
+.sidebar input:checked + label .chbx-label::before, 
+.sidebar input:checked + label .chbx-label::after{
     content: "";
     display: block;
     width: 16px;
     height: 2px;
     background: #000;
     position: absolute;
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
     top: 7px;
     left: 0;
     border-radius: 3px;
+    -webkit-animation: check-left 0.6s;
+            animation: check-left 0.6s;
 }
-.sidebar #brand-1:checked ~ label[for="brand-1"] .chbx-label::after,
-.sidebar #brand-2:checked ~ label[for="brand-2"] .chbx-label::after,
-.sidebar #brand-3:checked ~ label[for="brand-3"] .chbx-label::after,
-.sidebar #brand-4:checked ~ label[for="brand-4"] .chbx-label::after,
-.sidebar #brand-5:checked ~ label[for="brand-5"] .chbx-label::after,
-.sidebar #brand-6:checked ~ label[for="brand-6"] .chbx-label::after{
-    transform: rotate(-45deg);
+.brands label .chbx-label::before, 
+.brands label .chbx-label::after{
+    content: "";
+    display: block;
+    width: 16px;
+    height: 2px;
+    background: #000;
+    position: absolute;
+    -webkit-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
+    top: 7px;
+    left: -9px;
+    border-radius: 3px;
+    -webkit-animation: disabled-box 0.6s;
+            animation: disabled-box 0.6s;
 }
-.sidebar #gr-1:checked ~ label[for="gr-1"] .rd-label::before,
-.sidebar #gr-3:checked ~ label[for="gr-3"] .rd-label::before,
-.sidebar #gr-2:checked ~ label[for="gr-2"] .rd-label::before{
+.brands input:checked + label .chbx-label::after{
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    -webkit-animation: check-right 0.6s;
+            animation: check-right 0.6s;
+}
+.sidebar input:checked + label .rd-label::before{
     content: "";
     display: block;
     position: absolute;
     width: 8px;
     height: 8px;
+    border: none;
     background: #000;
     border-radius: 50%;
     top: 4px;
     left: 4px;
+    -webkit-animation: check-left 0.6s;
+            animation: check-left 0.6s;
+}
+.sidebar input:disabled + label{
+    opacity: 0.3;
+}
+.sidebar input:disabled + label:hover{
+    color: #000;
+}
+.sidebar input + label:hover{
+    color: #663d15;
 }
 .products{
     width: 700px;
@@ -568,14 +789,16 @@ p.txt-caption{
     margin-bottom: 20px;
     background: #fff;
     line-height: 18px;
-    box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
+    -webkit-box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
+            box-shadow: 0 0 15px rgba(0, 1, 1, 0.2);
 }
 .products-item a:not(.btn){
     color: #000;
     text-decoration: none;
 }
 .products-item:hover{
-    box-shadow: 3.2px 3.8px 25px rgba(0, 1, 1, 0.3);
+    -webkit-box-shadow: 3.2px 3.8px 25px rgba(0, 1, 1, 0.3);
+            box-shadow: 3.2px 3.8px 25px rgba(0, 1, 1, 0.3);
 }
 
 .products-item .product-name{
@@ -588,7 +811,8 @@ p.txt-caption{
 }
 .products-list .product-img img{
     margin-bottom: 9px;
-    box-shadow: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
 }
 .name{
     display: block;
@@ -598,8 +822,12 @@ p.txt-caption{
     margin-right: 0;
 }
 .product-info{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-bottom: 32px;
 }
 figure,p{
@@ -610,9 +838,23 @@ figure,p{
 }
 .appointment-form input{
     width: 100%;
-    padding: 12px 15px;
+    padding: 11px 10px 10px 15px;
     border: 2px solid #000;
     background: #f9f6f3;
+    font-size: 14px;
+    font-family: "PT Sans Narrow";
+    font-weight: bold;
+}
+.appointment-form input::-moz-placeholder {
+    font-size: 14px;
+    font-family: "PT Sans Narrow";
+    color: #000000;
+}
+.appointment-form input::-webkit-input-placeholder {
+    font-size: 14px;
+    font-family: "PT Sans Narrow";
+    color: #000000;
+    font-weight: bold;
 }
 .appointment-form input:focus{
     border: 2px solid #663d15;
@@ -623,9 +865,14 @@ figure,p{
     margin-bottom: 12px;
 }
 .form-block{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin: 13px 0;
     margin-bottom: 7px;
 }
@@ -683,6 +930,8 @@ figure,p{
     font-size: 14px
 }
 .footer-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 .footer-contacts{
@@ -759,6 +1008,8 @@ figure,p{
     top:50px;
     left:50%;
     margin-left: -230px;
+    -webkit-animation: popup 0.9s;
+            animation: popup 0.9s;
     
 }
 .login-form p{
@@ -775,8 +1026,12 @@ figure,p{
 }
 .login-save{
     margin: 15px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .login-save input{
     display: none;
@@ -810,10 +1065,14 @@ figure,p{
     background: #000;
     top:7px;
     left: 0;
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
 }
 .login-save #save-me:checked ~ label[for="save-me"] .form-chbx::after{
-    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
 }
 .close{
 	font-size: 0;
@@ -836,21 +1095,44 @@ figure,p{
 	top: 10px;
     right: 5px;
 	border-radius: 2px;
-	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	        transform: rotate(45deg);
 }
 .close::after{
-	transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	    -ms-transform: rotate(-45deg);
+	        transform: rotate(-45deg);
+}
+.close-map::before, .close-map::after{
+	top: -6px;
+    right: -4px;
 }
 .map{
-    margin: 0 auto;
-    width: 765px;
-    display: none;
+    position: fixed;
+    top:50px;
+    left:50%;
+    margin-left: -390px;
+    -webkit-animation: popup 0.9s;
+            animation: popup 0.9s;
+    width: 780px;
+    border: 7px solid #fff;
+    -webkit-box-shadow: 0 30px 50px rgba(0, 1, 1, 0.75);
+            box-shadow: 0 30px 50px rgba(0, 1, 1, 0.75);
 }
-.bg-popup{
+.bg-popup, .bg-popup-map{
     position: absolute;
     top:0;
     left: 0;
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.678);
+    display: none;
 }
+.show-form-popup{
+    display: block
+}
+.modal-error {
+    -webkit-animation: shake 0.6s;
+            animation: shake 0.6s;
+  }
